Added cherry-pick commit with conflicts resolved